Import of TOKUHIROM/HTTPx-Dispatcher-0.02 from CPAN.
gitpan-cpan-distribution: HTTPx-Dispatcher
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TOKUHIROM/HTTPx-Dispatcher-0.02.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 Revision history for Perl extension HTTPx::Dispatcher
 
+0.02
+
+    - fixed deps.
+    - added new feature: Dispatcher->uri_for({ 'controller' => 'Foo', 'action' => 'bar' })
+
 0.01    Thu Apr 24 20:38:18 2008
         - original version
