Import of TOKUHIROM/HTTPx-Dispatcher-0.04 from CPAN.
gitpan-cpan-distribution: HTTPx-Dispatcher
gitpan-cpan-version:      0.04
gitpan-cpan-path:         TOKUHIROM/HTTPx-Dispatcher-0.04.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension HTTPx::Dispatcher
 
+0.04
+
+    - no feature changes.
+
+0.03
+
+    - BUG FIXED: oops. HTTP::Request->uri returns absolute uri.
+
 0.02
 
     - fixed deps.
