Import of TOKUHIROM/HTTPx-Dispatcher-0.06 from CPAN.
gitpan-cpan-distribution: HTTPx-Dispatcher
gitpan-cpan-version:      0.06
gitpan-cpan-path:         TOKUHIROM/HTTPx-Dispatcher-0.06.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension HTTPx::Dispatcher
 
+0.06
+
+    - integrate with Plack
+    - fixed test
+    - support URI Templates(by masaki++)
+    - support head slash(by masaki++)
+
 0.05
 
     - added deps: URI
