--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension HTTPx::Dispatcher
 
+0.07
+
+    - inherit Exporter for export_to_level
+
 0.06
 
     - integrate with Plack
